# AI_Roadmap

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  llm.py  runner.py  search.py  verify.py
app/: __init__.py  db.py  graph.py  models.py  scheduler.py  seed.py  util.py
app/api/: __init__.py  insights.py  modules.py  roadmaps.py  runs.py  serializers.py  sessions.py  today.py
design-handoff/roadmap-agent-saas-design/: README.md
design-handoff/roadmap-agent-saas-design/project/: .thumbnail  Roadmap Agent - Roadmap Directions.html  Roadmap Agent App.dc.html  Roadmap Directions-print-1k6iidt.dc.html  Roadmap Directions.dc.html  Главная.dc.html
design-handoff/roadmap-agent-saas-design/project/assets/: app.css  home.css  roadmap.css  themes.scoped.css
files/: build-roadmap.md  claude-code-prompt.md
templates/: index.html
tests/: conftest.py  test_delete_cascade.py  test_graph.py  test_llm_providers.py  test_scheduler.py  test_search_classify.py  test_util.py
